--- a/Ethik.Utility/Ethik.Utility.csproj
+++ b/Ethik.Utility/Ethik.Utility.csproj
@@ -9,9 +9,7 @@
     <Description>This will contain utility ies hold untilites that can be used in other projects</Description>
     <PackageProjectUrl></PackageProjectUrl>
     <Version>1.0.0</Version>
-  <Authors>YourName</Authors>
-  <Description>YourPackageDescription</Description>    <Authors>YourName</Authors>
-    Mehedi Rahaamman
+	  <Authors>Mehedi Rahaman</Authors>
   </PropertyGroup>
 
   <ItemGroup>
