--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,8 +35,12 @@ jobs:
     - name: Build
       run: dotnet build ${{ matrix.project }} --configuration Release --no-restore
 
+    - name: Determine Version
+      id: vars
+      run: echo "VERSION=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
+
     - name: Pack the project
-      run: dotnet pack ${{ matrix.project }} --configuration Release --no-build --output ./nupkg
+      run: dotnet pack ${{ matrix.project }} --configuration Release --no-build --output ./nupkg /p:Version=${{ env.VERSION }}
 
     - name: Publish NuGet package
       run: dotnet nuget push "./nupkg/*.nupkg" --source "https://api.nuget.org/v3/index.json" --api-key ${{ secrets.NUGET_API_KEY }}
