--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Determine Version
       id: vars
-      run: echo "VERSION=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
+      run: echo "VERSION=$(date +'%Y.%m.%d%H%M')" >> $GITHUB_ENV
 
     - name: Pack the project
       run: dotnet pack ${{ matrix.project }} --configuration Release --no-build --output ./nupkg /p:Version=${{ env.VERSION }}
