--- a/Ethik.Utility/Ethik.Utility.csproj
+++ b/Ethik.Utility/Ethik.Utility.csproj
@@ -6,9 +6,9 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Ethik.Utility</Title>
-    <Description>This will contain utility ies hold untilites that can be used in other projects</Description>
+    <Description>The Utility NuGet Package provides essential utilities for .NET applications, focusing on streamlined error handling and standardized API responses/models. This package is designed to help developers with premade tools and utilities that can be used in any projects and errors efficiently, with a focus on configurability and ease of integration.</Description>
     <PackageProjectUrl>https://www.nuget.org/packages/Ethik.Utility</PackageProjectUrl>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
 	  <Authors>Mehedi Rahaman</Authors>
   </PropertyGroup>
 
