--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -86,6 +86,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
+    - name: Restore dependencies
+      run: dotnet restore ${{ matrix.project }}
+
     - name: Pack the project
       run: dotnet pack ${{ matrix.project }} --configuration Release --no-build --output ./nupkg
 
