--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Build, Test and Publish Ethik Nugets
+name: Build, Test and Publish Ethik.Utility Nugets
 
 on:
   push:
@@ -17,7 +17,10 @@ jobs:
       matrix:
         project:
           # List all your project paths relative to the solution root
-          - Src/Ethik.Utility/Ethik.Utility.csproj
+          - Src/Ethik.Utility.Api/Ethik.Utility.Api.csproj
+          - Src/Ethik.Utility.Common/Ethik.Utility.Common.csproj
+          - Src/Ethik.Utility.Data/Ethik.Utility.Data.csproj
+          - Src/Ethik.Utility.Security/Ethik.Utility.Security.csproj
 
     steps:
     - name: Checkout code
@@ -74,7 +77,10 @@ jobs:
       matrix:
         project:
           # List all your project paths relative to the solution root
-          - Src/Ethik.Utility/Ethik.Utility.csproj
+          - Src/Ethik.Utility.Api/Ethik.Utility.Api.csproj
+          - Src/Ethik.Utility.Common/Ethik.Utility.Common.csproj
+          - Src/Ethik.Utility.Data/Ethik.Utility.Data.csproj
+          - Src/Ethik.Utility.Security/Ethik.Utility.Security.csproj
 
     steps:
     - name: Checkout code
