--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
     strategy:
       matrix:
         project:
-          - Tests/Ethik.Utility.ApiTestsTests/Ethik.Utility.ApiTests.csproj
+          - Tests/Ethik.Utility.ApiTests/Ethik.Utility.ApiTests.csproj
           - Tests/Ethik.Utility.CommonTests/Ethik.Utility.CommonTests.csproj
           - Tests/Ethik.Utility.DataTests/Ethik.Utility.DataTests.csproj
           - Tests/Ethik.Utility.SecurityTests/Ethik.Utility.SecurityTests.csproj
