--- a/Src/Ethik.Utility.Api/Ethik.Utility.Api.csproj
+++ b/Src/Ethik.Utility.Api/Ethik.Utility.Api.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.19" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
