--- a/Src/Ethik.Utility.Common/Ethik.Utility.Common.csproj
+++ b/Src/Ethik.Utility.Common/Ethik.Utility.Common.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
