--- a/Src/Ethik.Utility.Data/Ethik.Utility.Data.csproj
+++ b/Src/Ethik.Utility.Data/Ethik.Utility.Data.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
